<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/recyclerViewExample"
        layout="@layout/entry_view"
        android:layout_width="372dp"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/savePrefsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/unfocusedColor"
        app:layout_constraintTop_toBottomOf="@+id/createExample" />

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/unfocusedColor"
        app:layout_constraintTop_toBottomOf="@+id/fontSize" />

    <include
        android:id="@+id/createExample"
        layout="@layout/activity_create_entry"
        android:layout_width="372dp"
        android:layout_height="213dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Spinner
        android:id="@+id/fontSize"
        android:layout_width="100dp"
        android:layout_height="40dp"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/fontStyle"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

    <Spinner
        android:id="@+id/fontStyle"
        android:layout_width="150dp"
        android:layout_height="40dp"
        app:layout_constraintLeft_toRightOf="@+id/fontSize"
        app:layout_constraintRight_toLeftOf="@id/fontColor"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

    <EditText
        android:id="@+id/fontColor"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:digits="0123456789ABCDEFabcdef"
        android:maxLength="6"
        android:ems="6"
        android:inputType="text|textCapSentences"
        app:layout_constraintLeft_toRightOf="@+id/fontStyle"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

    <Button
        android:id="@+id/savePrefsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/save_prefs"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/prefs_ce_label"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/createExample"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prefs_rv_label"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/recyclerViewExample"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider3" />

</android.support.constraint.ConstraintLayout>